; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_ring_buffer.c_rb_update_iter_read_stamp.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_ring_buffer.c_rb_update_iter_read_stamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ring_buffer_iter = type { i32 }
%struct.ring_buffer_event = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ring_buffer_iter*, %struct.ring_buffer_event*)* @rb_update_iter_read_stamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rb_update_iter_read_stamp(%struct.ring_buffer_iter* %0, %struct.ring_buffer_event* %1) #0 {
  %3 = alloca %struct.ring_buffer_iter*, align 8
  %4 = alloca %struct.ring_buffer_event*, align 8
  %5 = alloca i32, align 4
  store %struct.ring_buffer_iter* %0, %struct.ring_buffer_iter** %3, align 8
  store %struct.ring_buffer_event* %1, %struct.ring_buffer_event** %4, align 8
  %6 = load %struct.ring_buffer_event*, %struct.ring_buffer_event** %4, align 8
  %7 = getelementptr inbounds %struct.ring_buffer_event, %struct.ring_buffer_event* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %32 [
    i32 130, label %9
    i32 129, label %10
    i32 128, label %18
    i32 131, label %24
  ]

9:                                                ; preds = %2
  br label %35

10:                                               ; preds = %2
  %11 = load %struct.ring_buffer_event*, %struct.ring_buffer_event** %4, align 8
  %12 = call i32 @ring_buffer_event_time_stamp(%struct.ring_buffer_event* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.ring_buffer_iter*, %struct.ring_buffer_iter** %3, align 8
  %15 = getelementptr inbounds %struct.ring_buffer_iter, %struct.ring_buffer_iter* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, %13
  store i32 %17, i32* %15, align 4
  br label %35

18:                                               ; preds = %2
  %19 = load %struct.ring_buffer_event*, %struct.ring_buffer_event** %4, align 8
  %20 = call i32 @ring_buffer_event_time_stamp(%struct.ring_buffer_event* %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.ring_buffer_iter*, %struct.ring_buffer_iter** %3, align 8
  %23 = getelementptr inbounds %struct.ring_buffer_iter, %struct.ring_buffer_iter* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %35

24:                                               ; preds = %2
  %25 = load %struct.ring_buffer_event*, %struct.ring_buffer_event** %4, align 8
  %26 = getelementptr inbounds %struct.ring_buffer_event, %struct.ring_buffer_event* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.ring_buffer_iter*, %struct.ring_buffer_iter** %3, align 8
  %29 = getelementptr inbounds %struct.ring_buffer_iter, %struct.ring_buffer_iter* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = add nsw i32 %30, %27
  store i32 %31, i32* %29, align 4
  br label %35

32:                                               ; preds = %2
  %33 = call i32 (...) @BUG()
  br label %34

34:                                               ; preds = %32
  br label %35

35:                                               ; preds = %34, %24, %18, %10, %9
  ret void
}

declare dso_local i32 @ring_buffer_event_time_stamp(%struct.ring_buffer_event*) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
